--- a/lesson_5/css/style.css
+++ b/lesson_5/css/style.css
@@ -4,48 +4,39 @@ body {
    font-family: "Poppins";
    font-weight: 300;
    font-size: 14px;
-   line-height: 25px;
+   line-height: 1.8;
    color: #6C757D;
+}
+
+.block-1, .block-2, .block-3, .criative {
+   max-width: 816px;
+   margin: 0 auto 80px;
 }
 
 .title-1, .title-2 {
    font-weight: 700;
    font-size: 25px;
-   line-height: 40px;
-   margin-left: 312px;
+   line-height: 1.6;
+   margin-bottom: 40px;
    color: #212529;
 }
 
 .title-1 {
-   width: 400px;
-   height: 80px;
-   margin-top: 15px;
+   max-width: 400px;
 }
 
 .title-2 {
-   width: 605px;
-   height: 120px;
-   margin-top: 80px;
+   max-width: 605px;
 }
 
-.text-1, .text-2, .text-3 {
-   width: 816px;
-   margin-left: 312px;
+.text-1-p1, .text-1-p2, .text-2-p1, .criative-text-p1 {
+   margin-bottom: 40px;
 }
 
-.text-1, .text-2, .criative {
-   margin-top: 40px;
-}
-
-.text-3 {
-   margin-top: 80px;
-}
 
 .criative {
-   width: 816px;
-   height: 700px;
+   max-height: 700px;
    padding: 15px;
-   margin-left: 312px;
    overflow-y: scroll;
 }
 
@@ -58,23 +49,37 @@ body {
 }
 
 .criative-image {
-   width: 605px;
-   height: 400px;
-   margin: 0 auto;
+   max-width: 605px;
+   margin: 0 auto 30px;
 }
 
-.image-1, .image-2 {
-   width: 1240px;
-   height: 400px;
-   margin-left: 100px;
-   margin-top: 80px;
+.image-1 {
+   display: block;
+   max-width: 1240px;
+   margin: 0 auto 80px;
+}
+
+.image-2 {
+   font-size: 0;
+	max-width: 1240px;
+	margin: 0 auto 80px;
+}
+
+.image-02 {
+	width: 50%;
+	padding-right: 15px;
+}
+
+.image-03 {
+	width: 50%;
+	padding-left: 15px;
 }
 
 .end {
+   max-width: 300px;
    font-size: 25px;
    font-weight: 500;
-   margin-top: 60px;
-   text-align: center;
+   margin: 0 auto;
    text-decoration: underline;
    color: rgb(18, 129, 129);
 }
